<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_api_settings"
        android:title="@string/api_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_history"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive_chat"
        android:title="@string/archive_chat"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_archives"
        android:title="@string/view_archives"
        android:orderInCategory="103"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu> 