<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="250dp"
    android:background="@drawable/popup_menu_background"
    android:backgroundTint="#F8141313"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:id="@+id/menu_settings"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="12dp"
        android:text="@string/settings"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/menu_ai_recommendations"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_ai"
        android:drawablePadding="12dp"
        android:text="@string/ai_recommendations"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/menu_hints"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_help"
        android:drawablePadding="12dp"
        android:text="@string/hints"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/menu_update"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_update"
        android:drawablePadding="12dp"
        android:text="Update System"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/menu_contact"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_contact"
        android:drawablePadding="12dp"
        android:text="@string/contact_us"
        app:drawableTint="@color/white" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:alpha="0.1"
        android:background="@color/white" />

    <TextView
        android:id="@+id/menu_logout"
        style="@style/PopupMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="12dp"
        android:text="@string/logout"
        app:drawableTint="@color/white" />

</LinearLayout>