<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <com.deepcore.kiytoapp.MindMapView
        android:id="@+id/mindMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mindmap_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/zoom_in"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_zoom_in"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/zoom_out"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_zoom_out"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/resetViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reset_view"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_reset_view"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout> 